// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot should work 1`] = `
<foo
  condition1={[Function Boolean]}
  condition2="false"
  value1={[Function String]}
  value2={[Function String]}
>
  <p>
    Line 1
  </p><div
    id="root0"
  >
    <div>
       val1 
    </div>
  </div>
</foo>
`;

exports[`snapshot should work 2`] = `
<div>
  <p>
    Line 1
  </p>
  <div
    id="root0"
  >
    <div>
       val1 
    </div>
    
    
  </div>
</div>
`;
